--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<!doctype html>
-cdd
+---
+layout: default
+css: /static/css/index.css
+---
 
-hello world!
+<ul class="article-list">
+    {% for post in site.posts %}
+    <li>
+        <a href="{{post.url}}"><h2>{{ post.title }}</h2></a>
+        <span class="date">{{ post.date }}</span>
+        <div class="excerpt">
+        {{ post.excerpt }}
+        </div>
+        <a href="###" class="btn">Continue reading</a>
+    </li>
+    {% endfor %}
+</ul>
