--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,9 @@ css: /static/css/projects.css
         </a>
     </li>
     <li class="pull-left">
-        <h3 class="font-small"><a target="_blank" href="https://chrome.google.com/webstore/detail/animate-generator/kionilekanaambbbnjghihllokicnnlj?utm_source=chrome-ntp-icon">Animation Gen...</a></h3>
+        <h3 class="font-small"><a target="_blank" href="http://melonh.com/animationGenerator/">Animation Gen...</a></h3>
         <a target="_blank" href="https://github.com/melonHuang/animationGenerator" class="star fa fa-github" title="star"></a>
-        <a target="_blank" href="https://chrome.google.com/webstore/detail/animate-generator/kionilekanaambbbnjghihllokicnnlj?utm_source=chrome-ntp-icon">
+        <a target="_blank" href="http://melonh.com/animationGenerator/">
             <img src="{{"/static/img/animateGenerator.png" | prepend: site.baseurl}}" alt="Animation Generator">
             <div class="detail">
                 <p class="desc">
