add resume and cover letter

--- a/huangwei.html
+++ b/huangwei.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>Wei Huang | Front end Developer</title>
+<title>Wei Huang | Front-End Developer</title>
 <style type="text/css">
 
 article,
@@ -613,19 +613,19 @@ dl em {
     <div class="resume">
         <h1>Wei Huang</h1>
 
-<h2>Front end Developer</h2>
+<h2>Front-End Developer</h2>
 
 <blockquote>
   <p><a href="melonh0327@gmail.com">melonh0327@gmail.com</a><br />
-  <a href="http://melonh.com/">http://melonh.com</a><br />
-  (86) 18611640327</p>
+  <a href="https://github.com/melonHuang">https://github.com/melonHuang</a><br />
+  (86) 18588640327</p>
 </blockquote>
 
 <hr />
 
 <h3 id="profile">Profile</h3>
 
-<p>A Chinese girl who&#8217;s passionate about crafting interesting and useful stuffs.</p>
+<p>A Chinese girl who loves crafting interesting and useful stuffs with 4 years working experiences as Front-End Developer. Enjoy achiving 60 fpm smoothy animations, responding to users under 100ms, and delivering interactive content as soon as possible by optimizing critical rendering path, etc. Write consistent, concise and modularized codes for better scalability. Also love sharing and learning from others.</p>
 
 <hr />
 
@@ -650,19 +650,19 @@ dl em {
 </dl></li>
 <li><dl>
 <dt>Work Well In</dt>
-<dd>1. High performance animation</dd>
+<dd>1. Optimizing web performance</dd>
 
-<dd>2. Componentized developement</dd>
+<dd>2. Scalable and modularized architecture</dd>
 
 <dd>3. Cross device development, including responsive design, performance optimization, webview, etc</dd>
 </dl></li>
 <li><dl>
 <dt>Tools &amp; Libraries</dt>
-<dd>1. Vim, Git/Svn, Chrome Devtools, Photoshop, zsh, etc</dd>
+<dd>1. vim, git/svn, chrome devtools, photoshop, zsh, etc</dd>
 
-<dd>2. npm, gulp, webpack, postCSS, babel, thinkjs, mocha.js, chai.js, etc</dd>
+<dd>2. npm, gulp, webpack, postCSS, babel, thinkjs, eslint, mocha.js, chai.js, etc</dd>
 
-<dd>3. Vue, Polymer, jQuery, Zepto, etc</dd>
+<dd>3. vue, polymer, jQuery, zepto, etc</dd>
 </dl></li>
 </ul>
 
@@ -674,44 +674,17 @@ dl em {
 <dt>Nova.js</dt>
 <dd><em>Javascript - Creator &amp; Owner</em>
 <strong>2015-2016</strong>
-A Web Component Framework, it&#8217;s only 12KB after gziped, providing an easy way to define custom element with data binding, CSS Scoping and so on.</dd>
+A Web Component Framework, only 12KB after gziped, providing an easy way to define custom element with data binding, CSS Scoping and so on.</dd>
 
 <dt>NovaUI</dt>
 <dd><em>Javascript - Creator &amp; Main Contributor</em>
 <strong>2013-2016</strong>
-A mobile-side component gallery with high animation performance, flexible APIs and clear documents.</dd>
+A mobile side component gallery with high animation performance, flexible APIs and clear documents.</dd>
 
 <dt>AnimationGenerator</dt>
 <dd><em>Chrome Extension - Creator &amp; Owner</em>
 <strong>2014</strong>
-A Chrome Devtool Extension which can help generate animation codes for web pages quickly. Just select the element, config animation properties, then the code is ready.</dd>
-</dl>
-
-<hr />
-
-<h3 id="experience">Experience</h3>
-
-<dl>
-<dt>Qihoo360</dt>
-<dd><em>Mid-level Front End Developer - Annual Excellenent Exployee of department</em></dd>
-
-<dd><em>Chuandao</em>
-<strong>2016-Now</strong>
-Mentor a team of four front-end developers, building an online presentation editor, designing creative features without product managers, developing the server-side logic, helping design the front end framework and workflow, enforcing coding standards and keeping the group engaged and passionate.</dd>
-
-<dd>
-<p><em>Baomitu</em>
-<strong>2015-2016</strong>
-Baomitu is a marketing platform that enables users to easily create their HTML5 scenes. I participated in the reconstruction of it, designed Nova.js to implement scene plugins as components, keeping the plugins independent and easy to maintain and extend.</p>
-
-<p><em>Mobile Guard</em>
-<strong>2014-2015</strong>
-In charge of the front end works of various products of Mobile Guard Department, including official websites, operational activities and embeded Webviews with 5M+ daily PVs, cooperating with many different people and dealing with different works in parallel everyday.</p>
-
-<p><em>Business System</em>
-<strong>2013-2014</strong>
-Developed web interfaces and logics, extracting common styles and plugins, writing styleguides and plugin documents to help maintain.</p>
-</dd>
+A Chrome Devtools extension which can help generate animation codes for web pages quickly. Just select the element, config animation properties, then the code is automatically generated.</dd>
 </dl>
 
 <hr />
@@ -723,6 +696,9 @@ Developed web interfaces and logics, extracting common styles and plugins, writi
 <dd><em>Speech - Shanghai, China</em>
 <strong>2015</strong></dd>
 
+<dt>Other Minor Speeches</dt>
+<dd><a href="https://melonhuang.github.io/sharing/">https://melonhuang.github.io/sharing/</a></dd>
+
 <dt>Large Scale Javascript</dt>
 <dd><em>Translation - with two colleagues</em>
 <strong>2016</strong></dd>
@@ -730,6 +706,33 @@ Developed web interfaces and logics, extracting common styles and plugins, writi
 <dt>The Mobile Handbook</dt>
 <dd><em>Translation - with three colleagues</em>
 <strong>2015</strong></dd>
+</dl>
+
+<hr />
+
+<h3 id="experience">Experience</h3>
+
+<dl>
+<dt>Qihoo360</dt>
+<dd><em>Mid-level Front-End Developer - Annual Excellent Employee of department</em></dd>
+
+<dd><em>Shengxiang</em>
+<strong>2016-2017</strong>
+Mentor a team of four Front-End Developers, building an online presentation editor, designing creative features without product managers, developing the server-side logic, helping design the Front-End framework and workflow, enforcing coding standards and keeping the group engaged and passionate.</dd>
+
+<dd>
+<p><em>Baomitu</em>
+<strong>2015-2016</strong>
+Baomitu is a marketing platform that enables users to easily create their HTML5 scenes. I participated in the reconstruction of it, designed Nova.js to implement scene plugins as components, keeping the plugins independent and easy to maintain and extend.</p>
+
+<p><em>Mobile Guard</em>
+<strong>2014-2015</strong>
+In charge of the Front-End works of various products of Mobile Guard Department, including official websites, operational activities and embeded Webviews with 5M+ daily PVs, cooperating with many different people and dealing with different works in parallel everyday.</p>
+
+<p><em>Business System</em>
+<strong>2013-2014</strong>
+Developed web interfaces and logics, extracting common styles and plugins, writing styleguides and plugin documents to help maintain.</p>
+</dd>
 </dl>
 
 <hr />
@@ -746,7 +749,7 @@ Developed web interfaces and logics, extracting common styles and plugins, writi
 
 <h3 id="footer">Footer</h3>
 
-<p>Wei Huang &#8212; <a href="melonh0327@gmail.com">http://melonh.com</a> &#8212; (86) 18611640327</p>
+<p>Wei Huang &#8212; <a href="melonh0327@gmail.com">melonh0327@gmail.com</a> &#8212; (86) 18588640327</p>
 
 <hr />
 
