--- a/huangwei.html
+++ b/huangwei.html
@@ -671,17 +671,17 @@ dl em {
 <h3 id="projects">Projects</h3>
 
 <dl>
-<dt>Nova.js</dt>
+<dt><a href="http://melonhuang.github.io/nova/">Nova.js</a></dt>
 <dd><em>Javascript - Creator &amp; Owner</em>
 <strong>2015-2016</strong>
 A Web Component Framework, only 12KB after gziped, providing an easy way to define custom element with data binding, CSS Scoping and so on.</dd>
 
-<dt>NovaUI</dt>
+<dt><a href="http://75team.github.io/novaUI/">NovaUI</a></dt>
 <dd><em>Javascript - Creator &amp; Main Contributor</em>
 <strong>2013-2016</strong>
 A mobile side component gallery with high animation performance, flexible APIs and clear documents.</dd>
 
-<dt>AnimationGenerator</dt>
+<dt><a href="https://chrome.google.com/webstore/detail/animation-generator/kionilekanaambbbnjghihllokicnnlj?utm_source=chrome-ntp-icon">AnimationGenerator</a></dt>
 <dd><em>Chrome Extension - Creator &amp; Owner</em>
 <strong>2014</strong>
 A Chrome Devtools extension which can help generate animation codes for web pages quickly. Just select the element, config animation properties, then the code is automatically generated.</dd>
